--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts":{
-    "start": "json-server --watch clientes.json --port 5000"},
-
+  "scripts": {
+    "start": "json-server --watch clientes.json --port 5000",
+    "start2": "json-server --watch login.json --port 5000"
+  },
+ 
   "keywords": [],
   "author": "",
   "license": "ISC",
